--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+
+    <!-- Fonts -->
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxanium:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Key Killer</title>
   </head>
   <body>
