--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <meta
+      name="theme-color"
+      content="#475569"
+    />
+    <meta
+      name="author"
+      content="Diogo Santos"
+    />
+    <meta
+      name="description"
+      content="Key killer is a keyboard typing game!"
+    />
     <link
       rel="icon"
       type="image/svg+xml"
       href="/vite.svg"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
     />
 
     <!-- Fonts -->
