--- a/index.html
+++ b/index.html
@@ -14,10 +14,28 @@
       name="author"
       content="Diogo Santos"
     />
+
+    <!-- Seo -->
     <meta
-      name="description"
+      property="og:title"
+      content="Key"
+      Killer
+    />
+    <meta
+      property="og:site_name"
+      content="Key"
+      Killer
+    />
+    <meta property="og:url" content=https://keykiller.diogodeese.com/>
+    <meta
+      property="og:description"
       content="Key killer is a keyboard typing game!"
     />
+    <meta
+      property="og:type"
+      content="website"
+    />
+
     <link
       rel="icon"
       type="image/svg+xml"
