--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       name="author"
       content="Diogo Santos"
     />
+    <link
+      rel="manifest"
+      href="./public/site.webmanifest"
+    />
 
     <!-- Seo -->
     <meta
@@ -40,6 +44,25 @@
       rel="icon"
       type="image/svg+xml"
       href="/vite.svg"
+    />
+
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./public//apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./public/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./public/favicon-16x16.png"
     />
 
     <!-- Fonts -->
