--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="manifest"
-      href="./public/site.webmanifest"
+      href="./site.webmanifest"
     />
 
     <!-- Seo -->
@@ -40,29 +40,23 @@
       content="website"
     />
 
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
-    />
-
     <!-- Favicon -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./public//apple-touch-icon.png"
+      href="./apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./public/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./public/favicon-16x16.png"
+      href="./favicon-16x16.png"
     />
 
     <!-- Fonts -->
